--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -181,7 +181,7 @@
     background-color: rgba(147, 234, 194, .5) !important
     top: 0
     left: 0
-    mix-blend-mode: multiply 
+    mix-blend-mode: multiply
 
 .text-left
   text-align: left !important
@@ -191,7 +191,7 @@
     img
       max-width: 350px
       margin: 1rem auto
-  
+
 .banner-interno__fondo
   background-image: url('../assets/curso/portada/banner-interno.png') !important
   background-size: cover
@@ -232,3 +232,8 @@
         color: $color-sistema-texto !important
     &__btn-cerrar
       background-color: $color-acento-botones
+.banner-principal__img
+  width: 400px !important
+.titulo-principal__numero
+  i,
+    color: $color-sistema-texto !important
